@@ -447,6 +447,29 @@ class TestHeaderFunctions(PyfitsTestCase):
             "CONTINUE  '&' / comment long comment long comment long comment long comment     "
             "CONTINUE  '&' / long comment                                                    ")
 
+    def test_long_string_repr(self):
+        """Regression test for #193
+
+        Ensure that the __repr__() for cards represented with CONTINUE cards is
+        split across multiple lines (broken at each *physical* card).
+        """
+
+        header = pyfits.Header()
+        header['TEST1'] = ('Regular value', 'Regular comment')
+        header['TEST2'] = ('long string value ' * 10, 'long comment ' * 10)
+        header['TEST3'] = ('Regular value', 'Regular comment')
+
+        assert_equal(repr(header).splitlines(),
+            [str(pyfits.Card('TEST1', 'Regular value', 'Regular comment')),
+             "TEST2   = 'long string value long string value long string value long string &' ",
+             "CONTINUE  'value long string value long string value long string value long &'  ",
+             "CONTINUE  'string value long string value long string value &'                  ",
+             "CONTINUE  '&' / long comment long comment long comment long comment long        ",
+             "CONTINUE  '&' / comment long comment long comment long comment long comment     ",
+             "CONTINUE  '&' / long comment                                                    ",
+             str(pyfits.Card('TEST3', 'Regular value', 'Regular comment'))])
+
+
     def test_long_string_from_file(self):
         c = pyfits.Card('abc', 'long string value '*10, 'long comment '*10)
         hdu = pyfits.PrimaryHDU()
